--- a/memo/pubspec.yaml
+++ b/memo/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    percent_indicator: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
